# project-kadastra

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.mlflow.yml  docker-compose.stage.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci-cd.yml
info/: data-sources.md  dev-rules.md  grid-rationale.md  h3-primer.md  hex-feature-layers.md  listings-scraping-mvp.md  nspd-api.md  project.md
info/decisions/: 0001-h3-resolutions.md  0002-region-tatarstan.md  0003-mlflow-docker.md  0004-synthetic-target.md  0005-baseline-training.md  0006-inference-and-map.md  0007-kazan-agglomeration-scope.md  0008-per-building-multi-class-valuation.md  0009-real-cadastre-target-via-nspd.md  0010-methodology-compliance-roadmap.md  0011-graph-based-distance-features.md  0012-relative-features-via-h3-parent-aggregations.md  0013-zonal-density-features-multi-radius.md  0014-poly-area-buffer-features.md  0015-territorial-features-via-gar.md  0016-quartet-of-models-and-loss-on-simplification.md  0017-object-geometry-passthrough-for-inspector.md  0018-object-geometry-features.md  0019-poi-distances-and-zonal-counts.md  0020-object-age-and-era-features.md  0021-nspd-rich-attributes-extension.md  0022-macro-territorial-emiss-features.md  0023-topography-dem-features.md  0024-road-network-advanced-features.md  0025-misc-enrichment-cbd-heritage-zoouit.md
infra/mlflow/: Dockerfile
scripts/: assemble_nspd_valuation_objects.py  build_buildings_features.py  build_coverage.py  build_esa_landcover_layer.py  build_esa_water_layer.py  build_gar_lookup.py  build_gold_features.py  build_hex_aggregates.py  build_kazan_agglomeration_boundary.py  build_metro_features.py  build_object_features.py  build_object_synthetic_target.py  build_road_features.py  build_road_graph_artifact.py  build_synthetic_target.py  build_valuation_objects.py  buildings_geojsonseq_to_csv.py  compare_listings_sources.py  download_dir_from_s3.py  download_gar.py  download_geoboundaries.py  download_listings_mvp.py  download_nspd_layer.py  download_walking_network.py  extract_listings_mvp.py  extract_osm_polygons.py  infer_object_predictions.py  infer_predictions.py  load_nspd_raw_objects.py  parse_emiss_xls_to_parquet.py  probe_cian_avito.py  probe_yandex_realty.py  profile_train_quartet.py  serve.py  train_listings_models.py  train_object_valuation_model.py  train_quartet.py  train_valuation_model.py  upload_dir_to_s3.py
src/kadastra/: __init__.py  composition_root.py  config.py
tests/integration/: test_app.py  test_auth.py
tests/unit/: test_assemble_nspd_valuation_objects.py  test_assemble_valuation_objects.py  test_asset_class.py  test_build_buildings_features.py  test_build_gold_features.py  test_build_hex_aggregates.py  test_build_metro_features.py  test_build_object_features.py  test_build_object_synthetic_target.py  test_build_region_coverage.py  test_build_road_features.py  test_build_synthetic_target.py  test_build_valuation_objects.py  test_building_features.py  test_catboost_quartet_model.py  test_classify_asset_class.py  test_classify_nspd_purpose.py  (+61 more)
(+105 files in other folders)
