[project]
name = "kadastra"
version = "0.1.0"
description = "Cadastral valuation on H3 hexagonal grid (pilot region: Tatarstan)"
readme = "README.md"
authors = [
    { name = "AlbM", email = "rinkorn.alb@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.96",
    "catboost>=1.2.10",
    "fastapi>=0.136.1",
    "h3>=4.4.2",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "mlflow-skinny>=3.11.1",
    "networkx>=3.4",
    "polars>=1.40.1",
    "pydantic-settings>=2.14.0",
    "pyproj>=3.7.2",
    "shapely>=2.1.2",
    "uvicorn>=0.46.0",
]

[build-system]
requires = ["uv_build>=0.10.4,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "moto[s3]>=5.1.22",
    "pyright>=1.1.409",
    "pytest>=9.0.3",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 120
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]
# Russian-language project: cadastral data (NSPD/EГРН), ADRs and inline
# comments use Cyrillic on purpose. RUF001/RUF002 flag every Cyrillic
# letter that has a confusable Latin glyph as 'ambiguous' — pure noise
# for this codebase, not a real defect class to enforce.
ignore = ["RUF001", "RUF002"]

[tool.pyright]
include = ["src", "tests"]
exclude = [".venv", "**/__pycache__"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"
reportUnknownArgumentType = "none"
# FastAPI route handlers look unused to pyright; the decorator does the registration.
reportUnusedFunction = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
